[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pywznab"
version = "0.1.0"
description = "Minimal Newznab API helper library"
readme = "AGENT.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.setuptools]
packages = ["pywznab"]
